--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <h1 class="text-center xl:text-left text-2xl xl:text-5xl font-bold">
                   Paytm Payment Instruments
                 </h1>
-                <div class="pt-10 xl:space-y-12">
+                <div class="pt-10 xl:space-y-12 w-890">
                     <section
                       class="bg-white rounded-lg shadow-sm pt-7 p-3 md:pl-14 xl:p-14 text-gray-600 body-font"
                     >
@@ -432,11 +432,7 @@
                           class="inline-flex items-center text-white bg-[#002970] border-0 py-3 px-6 focus:outline-none hover:bg-black rounded-full"
                         >
                           Learn More
-                          <img
-                            class="ml-3"
-                            src="./assets/img/angle-right (1).svg"
-                            alt=""
-                          />
+                          <i class=" border-solid border-white border-r-4 border-b-4 border-t-0 border-l-0 inline-block p-1   rotate-310"></i>
                         </button>
                       </div>
                     </div>
@@ -486,6 +482,42 @@
                 
                   </div>
               </div>
+
+              <div
+              class=" mt-4 bg-white xl:flex-row flex-col text-center xl:text-left flex px-4  lg:py-10 lg:px-40 lg:py-32 mx-auto"
+            >
+              <div class="space-y-7 xl:space-y-12">
+                <h1 class="xl:text-5xl mt-8 text-3xl font-semibold">
+                  Financial Services by Paytm
+                </h1>
+                <img
+                  class="h-8 mx-auto xl:mx-0"
+                  src="https://assetscdn1.paytm.com/images/catalog/view/307193/1617696576778.png"
+                  alt=""
+                />
+                <h1 class="text-4xl font-bold">
+                  India's most sincere <br />
+                  bank.
+                </h1>
+                <p class="text-lg text-center xl:text-left mx-auto xl:mx-0 w-3/4">
+                  Paytm Payments Bank offers secure, transparent and risk-free banking
+                  at your fingertips. With instant account opening, virtual debit card
+                  and zero balance requirements, experience the future of banking today.
+                </p>
+                <button
+                  class="inline-flex items-center text-white bg-[#002970] border-0 py-2 px-5 font-semibold text-lg focus:outline-none hover:bg-black rounded-full"
+                >
+                  Learn More
+                  <i class=" border-solid border-white border-r-4 border-b-4 border-t-0 border-l-0 inline-block p-1   rotate-310"></i>
+                </button>
+              </div>
+              <img
+                class="w-3/4 xl:w-2/5 mx-auto mt-5 xl:mt-0"
+                src="https://assetscdn1.paytm.com/images/catalog/view_item/728826/1626076427497.png"
+                alt=""
+              />
+            </div>
+        
   
   </body>
 </html>
