--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
             class="xl:container mx-auto flex md:flex-row flex-col items-center"
                      >
                      <div
-                     class="lg:flex-grow xl:ml-10 lg:pl-10 md:w-1/2 space-y-6 2xl:pr-24 md:pr-4 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center"
+                     class="lg:flex-grow xl:ml-10 lg:pl-10 md:w-1/2 space-y-6 xl:pr-24 md:pr-4 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center"
                    >
                       
                          <h1
@@ -618,13 +618,22 @@
                        </div>
 
 
-                       <div class=" md:max-w-md  md:absolute items-end md:right-0  max-w-md ml-5 xs:hidden   ">
+                       <!-- <div class=" md:max-w-md  md:w-1/2   max-w-md    ">
                         <img
                           class="object-cover rounded"
                           alt="hero"
                           src="https://assetscdn1.paytm.com/images/catalog/view_item/853877/1626077000254.png"
                         />
-                      </div>
+                      </div> -->
+                      <div
+                      class="md:max-w-md  w-1/2  "
+                                    >
+                      <img
+                        class="object-cover md:inline w-1/2 md:w-full object-center rounded sm:w-full  "
+                        alt="hero"
+                        src="https://assetscdn1.paytm.com/images/catalog/view_item/853877/1626077000254.png"
+                      />
+                    </div>
 
                </div>
               </section>
