--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                       class="md:max-w-md  w-1/2  "
                                     >
                       <img
-                        class="object-cover md:inline w-1/2 md:w-full object-center rounded sm:w-full  "
+                        class="object-cover ml-11 md:inline w-1/2 md:w-full object-center rounded sm:w-full  "
                         alt="hero"
                         src="https://assetscdn1.paytm.com/images/catalog/view_item/853877/1626077000254.png"
                       />
