--- a/index.html
+++ b/index.html
@@ -637,6 +637,58 @@
 
                </div>
               </section>
+
+              <section
+              class="bg-white rounded-lg shadow-sm pt-7 p-3 md:pl-14 xl:p-14 text-gray-600 body-font"
+            >
+            <div
+            class="xl:container mx-auto flex md:flex-row flex-col items-center"
+                     >
+                     <div
+                     class="lg:flex-grow xl:ml-10 lg:pl-10 md:w-1/2 space-y-6 xl:pr-24 md:pr-4 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center"
+                   >
+                      
+                         <h1
+                           class="title-font sm:text-4xl sm:font-semibold md:w-[26rem] text-3xl mb-4 font-medium text-gray-900"
+                         >
+                         In-shop payments <br />
+                         powered by Paytm.
+                           <br class="hidden lg:inline-block" />
+                         </h1>
+                         <p class="mb-8 max-w-lg font-semibold md:w-[26rem]">
+                           Load up your Paytm Wallet for free and make payments in a jiffy
+                           at over 21 million stores, websites and apps.
+                         </p>
+                         <div class="flex justify-center">
+                            <button
+                            class="inline-flex items-center text-white bg-[#002970] border-0 py-5 px-10 font-semibold text-lg focus:outline-none hover:bg-black rounded-full"
+                          >
+                            Learn More
+                            <i class="ml-4 border-solid border-white border-r-4 border-b-4 border-t-0 border-l-0 inline-block p-1   rotate-310"></i>
+                          </button>
+                         </div>
+                       </div>
+
+
+                       <!-- <div class=" md:max-w-md  md:w-1/2   max-w-md    ">
+                        <img
+                          class="object-cover rounded"
+                          alt="hero"
+                          src="https://assetscdn1.paytm.com/images/catalog/view_item/853877/1626077000254.png"
+                        />
+                      </div> -->
+                      <div
+                      class="md:max-w-md  w-1/2  "
+                                    >
+                      <img
+                        class="object-cover ml-11 md:inline w-1/2 md:w-full object-center rounded sm:w-full  "
+                        alt="hero"
+                        src="https://assetscdn1.paytm.com/images/catalog/view_item/853880/1656675942486.png"
+                      />
+                    </div>
+
+               </div>
+              </section>
               </div>
             </div>
   
