--- a/index.html
+++ b/index.html
@@ -691,6 +691,80 @@
               </section>
               </div>
             </div>
+              <!-- Buisness Tools -->
+    <div class="py-24 pb-32 bg-white px-64">
+        <h1 class="text-4xl w-[30rem] font-bold mb-10">
+          Business Tools to help your business grow
+        </h1>
+  
+        <div class="flex justify-between">
+          <div class="w-[15rem] rounded-md">
+            <img
+              src="https://assetscdn1.paytm.com/images/catalog/view_item/854033/1626081565192.png"
+              alt=""
+              class="object-cover object-center w-full"
+            />
+            <div class="mt-6 mb-2">
+              <h2 class="text-3xl mb-5 font-semibold tracking-wide">
+                POS Billing Software
+              </h2>
+            </div>
+            <p class="text-lg mb-3">
+              Say Hello to Smart Retail Business Management of Paytm
+            </p>
+            <p class="font-semibold">Learn More</p>
+          </div>
+          <div class="w-[15rem] rounded-md">
+            <img
+              src="https://assetscdn1.paytm.com/images/catalog/view_item/854035/1626081071077.png"
+              alt=""
+              class="object-cover object-center w-full"
+            />
+            <div class="mt-6 mb-2">
+              <h2 class="text-3xl mb-5 font-semibold tracking-wide">
+                Paytm for Business App
+              </h2>
+            </div>
+            <p class="text-lg mb-3">
+              Everything you need to manage your business on your phone
+            </p>
+            <p class="font-semibold">Learn More</p>
+          </div>
+          <div class="w-[15rem] rounded-md">
+            <img
+              src="https://assetscdn1.paytm.com/images/catalog/view_item/854036/1656568216166.png"
+              alt=""
+              class="object-cover object-center w-full"
+            />
+            <div class="mt-6 mb-2">
+              <h2 class="text-3xl mb-5 font-semibold tracking-wide">
+                Advertise on Paytm
+              </h2>
+            </div>
+            <p class="text-lg mb-3">
+              Grow your business by advertising on India’s largest mobile business
+            </p>
+            <p class="font-semibold">Learn More</p>
+          </div>
+          <div class="w-[15rem] rounded-md">
+            <img
+              src="https://assetscdn1.paytm.com/images/catalog/view_item/854038/1626081814411.png"
+              alt=""
+              class="object-cover object-center w-full"
+            />
+            <div class="mt-6 mb-2">
+              <h2 class="text-3xl mb-5 font-semibold tracking-wide">
+                Business <br />
+                Khata
+              </h2>
+            </div>
+            <p class="text-lg mb-3">
+              Managing Khata made easy with the help of paytm khata dashboard
+            </p>
+            <p class="font-semibold">Learn More</p>
+          </div>
+        </div>
+      </div>
   
   </body>
 </html>
