--- a/index.html
+++ b/index.html
@@ -692,13 +692,13 @@
               </div>
             </div>
               <!-- Buisness Tools -->
-    <div class="py-24 pb-32 bg-white px-64">
+    <div class="2xl:mt-36 mt-8 lg:px-40">
         <h1 class="text-4xl w-[30rem] font-bold mb-10">
           Business Tools to help your business grow
         </h1>
   
-        <div class="flex justify-between">
-          <div class="w-[15rem] rounded-md">
+        <div class="lg:flex lg:justify-between ">
+          <div class="w-[15rem] rounded-md ml-40 pt-20">
             <img
               src="https://assetscdn1.paytm.com/images/catalog/view_item/854033/1626081565192.png"
               alt=""
@@ -714,7 +714,7 @@
             </p>
             <p class="font-semibold">Learn More</p>
           </div>
-          <div class="w-[15rem] rounded-md">
+          <div class="w-[15rem] rounded-md ml-40 pt-20">
             <img
               src="https://assetscdn1.paytm.com/images/catalog/view_item/854035/1626081071077.png"
               alt=""
@@ -730,7 +730,7 @@
             </p>
             <p class="font-semibold">Learn More</p>
           </div>
-          <div class="w-[15rem] rounded-md">
+          <div class="w-[15rem] rounded-md ml-40 pt-20 ">
             <img
               src="https://assetscdn1.paytm.com/images/catalog/view_item/854036/1656568216166.png"
               alt=""
@@ -746,7 +746,7 @@
             </p>
             <p class="font-semibold">Learn More</p>
           </div>
-          <div class="w-[15rem] rounded-md">
+          <div class="w-[15rem] rounded-md ml-40 pt-20" >
             <img
               src="https://assetscdn1.paytm.com/images/catalog/view_item/854038/1626081814411.png"
               alt=""
