--- a/index.html
+++ b/index.html
@@ -693,9 +693,11 @@
             </div>
               <!-- Buisness Tools -->
     <div class="2xl:mt-36 mt-8 lg:px-40">
-        <h1 class="text-4xl w-[30rem] font-bold mb-10">
+      
+        <h1 class="text-center xl:text-left text-2xl xl:text-5xl font-bold  ">
           Business Tools to help your business grow
         </h1>
+      
   
         <div class="lg:flex lg:justify-between ">
           <div class="w-[15rem] rounded-md mx-auto pt-20">
@@ -725,7 +727,7 @@
                 Paytm for Business App
               </h2>
             </div>
-            <p class="text-lg mb-3">
+            <p class="text-lg mb-3 text-center">
               Everything you need to manage your business on your phone
             </p>
             <p class="font-semibold">Learn More</p>
