--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
               <!-- Buisness Tools -->
     <div class="2xl:mt-36 mt-8 lg:px-40">
       
-        <h1 class="text-center xl:text-left text-2xl xl:text-5xl font-bold  ">
+        <h1 class="text-center xl:text-left text-5xl xl:text-5xl font-bold pt-20  ">
           Business Tools to help your business grow
         </h1>
       
