--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
           <div class="space-y-12">
        
-            <div class="mb-7 flex items-center  ">
+            <div class="mb-7 flex items-center mx-auto  ">
             <img class=" xl:h-20 h-10 inline ml-44 " src="https://assetscdn1.paytm.com/images/catalog/view/308774/1617696247991.png" alt="" />
                 </div> 
             <h1 class="text-2xl  font-bold">
