--- a/index.html
+++ b/index.html
@@ -521,17 +521,17 @@
             <!-- long terms goals -->
 
           <div
-          class="xl:py-24 py-2 lg:text-left text-center px-4 flex flex-col-reverse xl:flex-row gap-20  xl:px-64"
+          class="xl:py-24 py-10 lg:text-left text-center px-4 flex flex-col-reverse xl:flex-row gap-20  xl:px-64"
         >
           <img
-            class="sm:w-1/2   "
+            class="sm:w-1 lg:w-1/2"
             src="https://assetscdn1.paytm.com/images/catalog/view_item/788781/1626077377376.png"
             alt=""
           />
 
           <div class="space-y-12">
        
-            <div class="mb-7 flex items-center mx-auto  ">
+            <div class="mb-7 flex items-center ">
             <img class=" xl:h-20 h-10 inline ml-44 " src="https://assetscdn1.paytm.com/images/catalog/view/308774/1617696247991.png" alt="" />
                 </div> 
             <h1 class="text-2xl  font-bold">
@@ -736,10 +736,10 @@
             <img
               src="https://assetscdn1.paytm.com/images/catalog/view_item/854036/1656568216166.png"
               alt=""
-              class="object-cover object-center w-full"
+              class="object-cover object-center "
             />
             <div class="mt-6 mb-2">
-              <h2 class="text-3xl mb-5 font-semibold tracking-wide">
+              <h2 class="text-3xl mb-5 font-semibold">
                 Advertise on Paytm
               </h2>
             </div>
@@ -755,7 +755,7 @@
               class="object-cover object-center w-full"
             />
             <div class="mt-6 mb-2">
-              <h2 class="text-3xl mb-5 font-semibold tracking-wide">
+              <h2 class="text-3xl mb-5 font-semibold">
                 Business <br />
                 Khata
               </h2>
