--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>
       Paytm: Secure & Fast UPI Payments, Recharge Mobile & Pay Bills
     </title>
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css"
       rel="stylesheet"
       type="text/css"
-    />
+    /> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -28,7 +28,7 @@
             },
             rotate: {
         '310': '310deg',
-      }
+            }
 
           },
         },
