--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
           class="xl:py-24 py-10 lg:text-left text-center px-4 flex flex-col-reverse xl:flex-row gap-20  xl:px-64"
         >
           <img
-            class="sm:w-1 lg:w-1/2"
+            class="sm:w-full lg:w-1/2"
             src="https://assetscdn1.paytm.com/images/catalog/view_item/788781/1626077377376.png"
             alt=""
           />
