--- a/index.html
+++ b/index.html
@@ -767,6 +767,146 @@
           </div>
         </div>
       </div>
+
+
+    <div class="md:px-28 py-20 bg-[#f0fbfe]">
+      <div class="bg-white rounded-lg flex flex-wrap p-20 gap-4">
+
+        <div class="w-full sm:w-56">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view/307196/1626420555412.png" alt="paytm_money"
+               class="w-40">
+          <p class="my-8">Get started on wealth creation journey with Zero brokerage fee &amp; no hidden charges.
+          </p>
+          <a href="#" class="mt-8 text-paytm-blue">Learn More</a>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/728894/1618576143299.png" alt="img"
+               class="rounded-lg w-full">
+          <p class="text-center text-white mt-4">Invest in Stocks</p>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/728895/1618575899205.png" alt="img"
+               class="rounded-lg w-full">
+          <p class="text-center text-white mt-4">Apply for IPO</p>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/800760/1618831809222.png" alt="img"
+               class="rounded-lg w-full">
+          <p class="text-center text-white mt-4">Invest in ETFs</p>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/728896/1618575990183.png" alt="img"
+               class="rounded-lg w-full">
+          <p class="text-center text-white mt-4">Buy Gold</p>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/728899/1618576408440.png" alt="img"
+               class="rounded-lg w-full">
+          <p class="text-center text-white mt-4">Invest in Mutual Funds</p>
+        </div>
+
+      </div>
+
+      <div class="bg-white rounded-lg flex flex-wrap p-20 gap-4 mt-10">
+
+        <div class="w-full sm:w-56">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view/307197/1626419838546.png" alt="paytm"
+               class="w-40">
+          <p class="my-8">Best travel solutions with quick ticket bookings, great offers and easy refunds</p>
+          <a href="#" class="mt-8 text-paytm-blue">Learn More</a>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/863734/1627552693557.png" alt="img"
+               class="w-16 mt-8 ml-2">
+          <p class="text-white mt-4 p-2">Flat 14% Cashback
+            With Code WELCOMEFLIGHT</p>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/863734/1627552693557.png" alt="img"
+               class="w-16 mt-8 ml-2">
+          <p class="text-white mt-4 p-2">100% Refund<br>With Paytm's Cancellation Protection</p>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/864145/1627566172335.png" alt="img"
+               class="w-16 mt-8 ml-2">
+          <p class="text-white mt-4 p-2">Flat 10% Cashback
+            With Code HAPPYBUS</p>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/864151/1627567062180.png" alt="img"
+               class="w-16 mt-8 ml-2">
+          <p class="text-white mt-4 p-2">Sanitized Bus option with Health+</p>
+        </div>
+
+        <div class="w-full sm:w-40 bg-[#66d6f9] rounded-lg p-1">
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/864152/1627566492097.png" alt="img"
+               class="w-16 mt-8 ml-2">
+          <p class="text-white mt-4 p-2">Hassle Free Train Ticket Bookings</p>
+        </div>
+
+      </div>
+
+
+
+    </div>
+
+
+
+
+    <section class="bg-paytmgrey">
+
+      <footer class="text-gray-600 body-font m-10 p-10">
+        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+          <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+
+                    <span class="w-52 text-black font-bold mt-4 ml-12 mb-4 "> Download Paytm App to Pay from anywhere
+                    </span>
+          </a>
+          <img class="ml-4 mt-4  " alt="Download Paytm iOS app"
+               src="https://assetscdn1.paytm.com/frontendcommonweb/71229188.svg">
+          <img class="ml-4 mt-4" alt="Download Paytm Android app"
+               src="https://assetscdn1.paytm.com/frontendcommonweb/33d9d7f1.svg">
+          <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+
+                    <a class="ml-4 text-gray-500">
+                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                             class="w-5 h-5" viewBox="0 0 24 24">
+                            <path
+                                    d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="ml-4 text-gray-500">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                             stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                        </svg>
+                    </a>
+                    <a class=" ml-4 text-gray-500">
+                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                             class="w-5 h-5" viewBox="0 0 24 24">
+                            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                        </svg>
+
+                    </a>
+
+                </span>
+        </div>
+      </footer>
+
+    </section>
+
+
   
   </body>
 </html>
